@@ -1,0 +1,6 @@
+
+Boolean subclass: #False
+	instanceVariableNames: ''
+	classVariableNames: ''
+	poolDictionaries: ''
+	category: 'Kernel-Objects'!
