@@ -1,0 +1,6 @@
+
+Object subclass: #UndefinedObject
+	instanceVariableNames: ''
+	classVariableNames: ''
+	poolDictionaries: ''
+	category: 'Kernel-Objects'!
